[package]
name = "nn"
version = "0.1.0"
edition = "2024"

[dependencies]
nn-utils = { path = "../nn-utils" }
nn-macro = { path = "../nn-macro" }

[features]
unstable = []

[[example]]
name = "linear-regression"
path = "./examples/linear_regression.rs"
required-features = ["unstable"]

[[example]]
name = "quadratic-regression"
path = "./examples/quadratic_regression.rs"

[[example]]
name = "multi-input"
path = "./examples/multi_input.rs"
