[package]
name = "tml"
version = "0.1.0"
edition = "2024"

[dependencies]
tml-utils = { path = "../tml-utils" }
tml-macro = { path = "../tml-macro" }

[dev-dependencies]
criterion = "0.5"

[features]
unstable = []

[[example]]
name = "linear-regression"
path = "./examples/linear_regression.rs"
required-features = ["unstable"]

[[example]]
name = "quadratic-regression"
path = "./examples/quadratic_regression.rs"

[[example]]
name = "multi-input"
path = "./examples/multi_input.rs"

[[example]]
name = "conv"
path = "./examples/conv.rs"

[[example]]
name = "conv_op"
path = "./examples/conv_op.rs"

[[bench]]
name = "conv"
harness = false
